update methods name

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,6 +8,6 @@
         <h1>Hello World!</h1>
         <h2>This is Polycell's project's</h2>
         <p>If you see these lines. That means this website run successfully</p>
-        <p>Copyright by Polycell Team</p>
+        <p>Copyright by Polycell Team.</p>
     </body>
 </html>
